--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <i class="fab fa-twitter"></i>
             <i class="fab fa-linkedin-in"></i>
             <i class="fab fa-youtube"></i>
-            <p>Copyright Yaokkevin Chaine Youtube</p>
+            <p>Copyright yassine-lazaar</p>
         </div>
     </section>
     <script>
